[project]
name = "llm-agents-mcp-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain==1.2.12",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "mlflow[genai,langchain]>=3.11.1",
    "python-dotenv>=1.2.2",
]
